Fixed navbar cutoff issue: Added flex

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,6 @@
 .navlink {
     margin: auto;
     margin-left: 15px;
-    margin-right: 15px;
     text-decoration: none;
     color: white;
     font-family: 'Arvo', serif;
@@ -18,5 +17,10 @@
 
 .iconlink:hover {
     fill:#C03265;
+}
+
+.icons {
+    display:inline-block;
+    white-space: nowrap;
 }
 
